static/css/main.css
/* ... */
#main-search-area {
    float: right;
}

.bg_nav_color {
    background-color: #1c3a42;
}

.bg_delivery_color {
    background-color: #e8a79d9c;
}

.small-search-show {
    display: none;
}

/*...........................................................Auth*/

.center-auth {
    justify-content: center;
    margin: auto;
    text-align: center;
}

/*...........................................................Homepage */

.main-container {
    position: relative;
    justify-content: center;
}

.main-images img {
    height: auto;
    width: 100%;
}

.small-show-heart i {
    display: none;
}

.welcome-margin {
    margin-top: 40px;
}

.bg-homepage-buttons {
    background-color: #e8a79d9c;
    border: white solid 2px;
}

.bg-homepage-buttons a {
    text-decoration: none;
    font-size: 20px;
}

.pink-background {
    background-color: #e8a79d9c;
    border: #e8a79d9c solid 2px;
    padding: 30px;
}

.cocktail-main-images {
    height: 300px;
    position: relative;
}

.cocktail-main-images img{
    opacity: 0.75;
    height: 300px;
    object-fit: cover;
    border: solid 2px white;
}

.cocktail-main-images img:hover {
    opacity: 1;
}

.cocktail-name-main {
    position: absolute;
    bottom: 20px;
    right: 0px;
}

.shop-main-btn {
    position: absolute;
    bottom: 60px;
    right: -50%;
}

.bartender {
    height: 300px;
    border: solid white 2px;
    overflow: hidden;
    opacity: 0.75;
    background-size: cover;
    background-position: center;
    background-image: url('../images/bartender2.jpg');
}

/*.....................................................All Products Page */

.gin-width {
    width:  100%;
    height: 300px;
    object-fit: cover;
}

.gin_image_cards_container {
    height: 200px;
    text-align: center;
    margin: 0;
}

.shop-btn {
    background-color: #1c3a42;
    width: 100%;
    border-radius: 5px;
    text-decoration: none;
}

.right-sort {
    float: right;
}

.shop-btn-product {
    background-color: #1c3a42;
    border: solid 2px white;
    border-radius: 5px;
    font-size: 18px;
    width: 400px;
    text-decoration: none;
}

/*......................................................Product Detail Page */

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"]{
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.edit-button {
    background-color: #ffa5009c;
    border-radius: 5px;
    text-decoration: none;
}

.delete-button {
    background-color: #ed6a6a8a;
    border-radius: 5px;
    text-decoration: none;
}

.gin_image_container {
    text-align: center;
    margin: 0;
}

.gin_image {
    width:  auto;
    height: 400px;
    object-fit: cover;
    border: solid 2px white;
}

.gin_image_cards {
    width:  auto;
    height: 100%;
    object-fit: cover;
    border: solid 2px white;
}

.gin-category {
    color:#df3419;
    text-decoration: none;
}

.add-button {
    background-color: #1c3a42;
    width: 100%;
    height: 60px;
    border-radius: 5px;
    text-decoration: none;
}

.extra-product-info a {
    text-decoration: none;
    color: #1c3a42;
}

.product-reccommended-images {
    height: 250px;
}

.product-reccommended-images img{
    opacity: 0.75;
    width:  100px;
    height: 250px;
    object-fit: cover;
    border: solid 2px white;
}

.background_header_reccommended {
    background-color: #1c3a42;
    border: white 2px solid;
}

.background_temp_strip-pink-product {
    background-color: #1c3a42;
    height: auto;
    border: white 2px solid;
}

#return-product-popup {
    z-index: -1;
    pointer-events: none;
    text-align: left;
    top: 40%;
    left: 50%;
}

#return-product-popup p {
    text-align: left;
    font-size: 18px;
    line-height: 20px;
}

#shipping-product-popup {
    z-index: -1;
    pointer-events: none;
    text-align: left;
    top: 40%;
    left: 50%;
}

#shipping-product-popup p {
    text-align: left;
    font-size: 18px;
    line-height: 20px;
}

/*.....................................................Wishlist*/

.wishlist_left {
    float: left;
}

.wishlist_right {
    float: right;
}

.heart {
    color: #e8a79d9c;
}

.btn-like {
    border: none;
    background: none;
}

.no-items {
    height: 250px;
}

/*.....................................................Reviews*/

.user-width {
    height: 75px;
}

#post-product-review:hover {
    cursor: pointer;
}

#close-review:hover {
    cursor: pointer;
}

#product-review {
    display: none;
}

#cocktail-review {
    display: none;
}

#close-cocktail:hover {
    cursor: pointer;
}

#post-cocktail-review:hover {
    cursor: pointer;
}

.red-background {
    height: 25px;
    width: 25px;
    border-radius: 50%;
    background-color: #e8a79d9c;
    float: right;
}


/*......................................................Delivery Information*/

.delivery-information {
    height: auto;
    background-color: #1c3a42;
}

.white-line {
    background-color: white;
}

.return-delivery-btn p {
    background-color: #e8a79d9c;
    width: 100%;
    height: 60px;
    border-radius: 5px;
}
.return-delivery-btn p:hover {
    background-color: #1c3a421c;
}

/*..............................................................Cocktails Page*/

.cocktail_image_cards {
    width:  100%;
    height: 100%;
    object-fit: cover;
    border: solid 2px white;
}

.white-background {
    background-color: #e8a79d9c;
    width: auto;
    float: right;
    border: white solid 2px;
}

.arrow-fixed {
    position: absolute;
    bottom: 0%;
    right: 0%;
}

.hide {
    display: none;
}

.cocktail-image {
    float: left;
    width:  200px;
    height: 200px;
    object-fit: cover;
    border: solid 2px white;
}

.cocktail-image-detail {
    float: left;
    width:  350px;
    height: 350px;
    object-fit: cover;
    border: solid 2px white;
}

.cocktail-background {
    height: 250px;
}
/* ... */

